[project]
name = "nodriver-mcp"
version = "1.3.0"
description = "Undetected Chrome automation MCP server powered by nodriver — a stealth, anti-bot-resistant alternative to chrome-devtools-mcp for Claude, Cursor and other AI agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andre Solbach" },
]
maintainers = [
    { name = "Andre Solbach" },
]
keywords = [
    "mcp", "model-context-protocol", "mcp-server", "nodriver", "chrome",
    "browser-automation", "web-scraping", "undetected", "anti-bot",
    "cloudflare-bypass", "claude", "cursor", "ai-agent", "llm",
    "chrome-devtools-mcp", "playwright-alternative", "puppeteer-alternative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.26.0,<2",
    # Chrome 146+ CDP fixes (sameParty removal, localNetworkAccessRequestPolicy
    # rename) that once required the Saber-CC fork are upstream as of 0.50.x.
    # Verified working against Chrome 150.
    "nodriver>=0.50.3",
    "pillow>=12.1.1",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/andresolbach/nodriver-mcp-server"
Repository = "https://github.com/andresolbach/nodriver-mcp-server"
Issues = "https://github.com/andresolbach/nodriver-mcp-server/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nodriver-mcp = "nodriver_mcp.cli:main"
